--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,17 @@
     <string name="app_name">GridClick</string>
     <string name="Title">Title</string>
     <string name="Author">Author</string>
+    <string name="about_description">This app shows information about the most popular books and their authors.</string>
+    <string name="about_desc">About Description</string>
+    <string name="about_title">About Title</string>
+    <string name="dialog_title">Rate Our App</string>
+    <array name="dialog_options">
+        <item>Excellent</item>
+        <item>Very Good</item>
+        <item>Good</item>
+        <item>Bad</item>
+        <item>Very Bad</item>
+    </array>
     <array name="button_names">
         <item>1</item>
         <item>2</item>
